<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context="com.example.android.business.MainActivity">

    <LinearLayout

        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:scaleType="centerCrop"
            android:src="@drawable/photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/background_name"
            android:orientation="vertical">

            <TextView
                style="@style/title"
                android:text="@string/store_name"/>

            <RatingBar
            style="@style/ratingBar"

          />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@color/background_text"
            android:orientation="vertical">


            <LinearLayout
                style="@style/contact">

                <ImageView

                    style="@style/contact_icon"
                    android:src="@drawable/ic_location_on_black_24dp" />

                <TextView

                    style="@style/contact_name"
                    android:text="@string/address" />
            </LinearLayout>

            <LinearLayout
                style="@style/contact">

                <ImageView
                    style="@style/contact_icon"
                    android:src="@drawable/ic_computer_black_24dp" />

                <TextView
                    style="@style/contact_name"
                    android:text="@string/url" />
            </LinearLayout>

            <LinearLayout
                style="@style/contact">

                <ImageView
                    style="@style/contact_icon"
                    android:src="@drawable/ic_phone_black_24dp" />

                <TextView
                    style="@style/contact_name"
                    android:text="@string/telephone" />
            </LinearLayout>

            <LinearLayout
                style="@style/contact">

                <ImageView
                    style="@style/contact_icon"
                    android:src="@drawable/ic_query_builder_black_24dp" />

                <TextView
                    style="@style/contact_name"
                    android:text="@string/hours" />
            </LinearLayout>

            <LinearLayout
                style="@style/contact">

                <ImageView
                    style="@style/contact_icon"
                    android:src="@drawable/ic_mail_outline_black_24dp" />

                <TextView
                    style="@style/contact_name"
                    android:text="@string/email" />

            </LinearLayout>

            <LinearLayout
               style="@style/contact"
                >

                <ImageView
                    android:layout_gravity="top"
                    style="@style/contact_icon"
                    android:src="@drawable/ic_info_black_24dp" />

                <TextView
                    style="@style/contact_name"
                    android:text="@string/description" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</ScrollView>